<resources>
    <string name="app_name">20230310-CarlosCabrera-NYCSchools</string>
    <string name="toolbar_title">NYC Schools List</string>
    <string name="methodology_10">Methodology 10</string>
    <string name="math_5">Math 5</string>
    <string name="ecology_9">Ecology 9</string>
    <string name="school_subject">School Subject</string>
    <string name="score">Avg Score</string>
    <string name="reading">Reading</string>
    <string name="_300">300</string>
    <string name="math">Math</string>
    <string name="_450">450</string>
    <string name="trishika_dasari">Trishika Dasari</string>
    <string name="guntur">Guntur</string>
    <string name="_230">230</string>
    <string name="writing">Writing</string>
    <string name="phoneicon">phoneIcon</string>
    <string name="takers">Takers</string>
    <string name="school_name">School Name</string>
    <string name="website">Website:</string>
    <string name="website_url">Website URL</string>
    <string name="email">Email:</string>
    <string name="emailContent">Email</string>
    <string name="phone">Phone #</string>
    <string name="phone_number">Phone Number</string>
    <string name="fax">Fax #</string>
    <string name="fax_number">Fax Number</string>
    <string name="start">Start:</string>
    <string name="start_time">Start Time</string>
    <string name="end">End:</string>
    <string name="end_time">End Time</string>
    <string name="addressTitle">Address:</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="ny">NY,</string>
    <string name="zip_code">Zip code</string>
    <string name="average_test_takers">Average Test Takers</string>
    <string name="sat_information">SAT Information</string>
    <string name="overview">Overview</string>
</resources>